--- a/task-03/.vscode/launch.json
+++ b/task-03/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "/home/abinav/git/amfoss-tasks/task-03/sub-task 4/C",
+      "program": "/home/abinav/git/amfoss-tasks/task-03/sub-task 4/C/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
